Use quotation marks instead of bold text
Change all references to screens in the app text are changed from
bold text to quotation marks.

--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -78,18 +78,18 @@
     <string name="vpn_settings_not_found">There is no VPN settings on your device</string>
     <string name="auto_connect_carousel_first_slide_top_text">The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both.</string>
     <string name="auto_connect_carousel_first_slide_bottom_text">
-        <![CDATA[1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name.]]>
+        <![CDATA[1. After clicking on the \"Go to VPN settings\" button below, click on the cogwheel next to the \"Mullvad VPN\" name.]]>
     </string>
     <string name="auto_connect_carousel_second_slide_top_text">Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart.</string>
     <string name="auto_connect_carousel_second_slide_bottom_text">
-        <![CDATA[2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>.]]>
+        <![CDATA[2. To enable Auto-connect, click on the toggle next to \"Always-on VPN\".]]>
     </string>
     <string name="auto_connect_carousel_third_slide_top_text">
-        <![CDATA[The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about]]>
+        <![CDATA[The Lockdown mode is called \"Block connections without VPN\" in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about]]>
     </string>
     <string name="auto_connect_carousel_third_slide_top_text_website_link">here</string>
     <string name="auto_connect_carousel_third_slide_bottom_text">
-        <![CDATA[3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>]]>
+        <![CDATA[3. To enable Lockdown mode, click on the toggle next to \"Block connections without VPN\".<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>]]>
     </string>
     <string name="auto_connect_footer_legacy_tv">Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update.</string>
     <string name="wireguard_mtu">WireGuard MTU</string>
@@ -149,7 +149,7 @@
     <string name="filter">Filter</string>
     <string name="select_location_description">While connected, your real location is masked with a private and secure location in the selected region.</string>
     <string name="split_tunneling_description">Lets you select apps that should access the Internet directly without going through the VPN tunnel.</string>
-    <string name="split_tunneling_description_warning">Attention: If "Block connections without VPN" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk.</string>
+    <string name="split_tunneling_description_warning">Attention: If \"Block connections without VPN\" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk.</string>
     <string name="enable">Enable</string>
     <string name="enable_custom_dns">Use custom DNS server</string>
     <string name="add_a_server">Add a server</string>
@@ -204,7 +204,7 @@
     <string name="dns_content_blockers_info">When this feature is enabled it stops the device from contacting certain domains or websites known for distributing ads, malware, trackers and more.</string>
     <string name="dns_content_blockers_warning">This might cause issues on certain websites, services, and apps.</string>
     <string name="dns_content_blockers_custom_dns_warning">
-        <![CDATA[Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>.]]>
+        <![CDATA[Attention: this setting cannot be used in combination with \"Use custom DNS server\".]]>
     </string>
     <string name="block_ads_title">Ads</string>
     <string name="block_trackers_title">Trackers</string>
@@ -214,10 +214,10 @@
     <string name="block_adult_content_title">Adult content</string>
     <string name="block_social_media_title">Social media</string>
     <string name="dns_content_blockers_subtitle">
-        <![CDATA[Disable <b>%s</b> below to activate these settings.]]>
+        <![CDATA[Disable \"%s\" below to activate these settings.]]>
     </string>
     <string name="custom_dns_disable_mode_subtitle">
-        <![CDATA[Disable all <b>%s</b> above to activate this setting.]]>
+        <![CDATA[Disable all \"%s\" above to activate this setting.]]>
     </string>
     <string name="settings_changes_effect_warning_short">DNS settings might not go into effect immediately</string>
     <string name="settings_changes_effect_warning_content_blocker">Changes to DNS related settings might not go into effect immediately due to cached results.</string>
@@ -275,7 +275,7 @@
     <string name="copied_logs_to_clipboard">Copied logs to clipboard</string>
     <string name="auto_connect_legacy">Auto-connect (legacy)</string>
     <string name="auto_connect_footer_legacy">
-        <![CDATA[Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above.]]>
+        <![CDATA[Please use the \"Always-on\" system setting instead by following the guide in \"%s\" above.]]>
     </string>
     <string name="custom_lists">Custom lists</string>
     <string name="all_locations">All locations</string>
