--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -2204,13 +2204,13 @@ msgstr ""
 msgid "%s was removed from \"%s\""
 msgstr ""
 
-msgid "1. After clicking on the <b>Go to VPN settings</b> button below, click on the cogwheel next to the <b>Mullvad VPN</b> name."
+msgid "1. After clicking on the \"Go to VPN settings\" button below, click on the cogwheel next to the \"Mullvad VPN\" name."
 msgstr ""
 
-msgid "2. To enable Auto-connect, click on the toggle next to <b>Always-on VPN</b>."
+msgid "2. To enable Auto-connect, click on the toggle next to \"Always-on VPN\"."
 msgstr ""
 
-msgid "3. To enable Lockdown mode, click on the toggle next to <b>Block connections without VPN</b>.<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
+msgid "3. To enable Lockdown mode, click on the toggle next to \"Block connections without VPN\".<br /><br /><b>Warning: This setting blocks split apps and the Local Network Sharing feature.</b>"
 msgstr ""
 
 msgid "30 days was added to your account."
@@ -2276,7 +2276,7 @@ msgstr ""
 msgid "Attention: Since this increases your total network traffic, be cautious if you have a limited data plan. It can also negatively impact your network speed and battery usage."
 msgstr ""
 
-msgid "Attention: this setting cannot be used in combination with <b>Use custom DNS server</b>."
+msgid "Attention: this setting cannot be used in combination with \"Use custom DNS server\"."
 msgstr ""
 
 msgid "Auto-connect & Lockdown mode"
@@ -2339,7 +2339,10 @@ msgstr ""
 msgid "Delete method?"
 msgstr ""
 
-msgid "Disable all <b>%s</b> above to activate this setting."
+msgid "Disable \"%s\" below to activate these settings."
+msgstr ""
+
+msgid "Disable all \"%s\" above to activate this setting."
 msgstr ""
 
 msgid "Discard"
@@ -2498,7 +2501,7 @@ msgstr ""
 msgid "Please enter a valid remote server port"
 msgstr ""
 
-msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
+msgid "Please use the \"Always-on\" system setting instead by following the guide in \"%s\" above."
 msgstr ""
 
 msgid "Preferences"
@@ -2570,7 +2573,7 @@ msgstr ""
 msgid "The Auto-connect and Lockdown mode settings can be found in the Android system settings, follow this guide to enable one or both."
 msgstr ""
 
-msgid "The Lockdown mode is called <b>Block connections without VPN</b> in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
+msgid "The Lockdown mode is called \"Block connections without VPN\" in the Android system settings. It helps minimize leaks, however it has some known limitations which you can read more about"
 msgstr ""
 
 msgid "The \"Current\" method represent which method the app is using to reach the API."
