--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -1528,6 +1528,18 @@ msgid "App version"
 msgstr ""
 
 msgctxt "settings-view"
+msgid "Apple Services Bypass"
+msgstr ""
+
+msgctxt "settings-view"
+msgid "Attention: This traffic will go outside of the VPN tunnel. Any application that tries to can bypass the VPN tunnel and send traffic to these Apple networks. This a temporary fix and we are currently working on a long-term solution."
+msgstr ""
+
+msgctxt "settings-view"
+msgid "Some Apple services such as iMessage have an issue where the network settings set by Mullvad get ignored, this in turn blocks those apps. Enabling this setting allows traffic to specific Apple-owned networks to go outside of the VPN tunnel, allowing services like iMessage and FaceTime to work whilst using Mullvad."
+msgstr ""
+
+msgctxt "settings-view"
 msgid "Support"
 msgstr ""
 
