--- a/gui/locales/it/messages.po
+++ b/gui/locales/it/messages.po
@@ -298,8 +298,8 @@ msgid "Expand %(location)s"
 msgstr "Espandi %(location)s"
 
 msgctxt "accessibility"
-msgid "Forget %(accountToken)s"
-msgstr "Dimentica %(accountToken)s"
+msgid "Forget %(accountNumber)s"
+msgstr "Dimentica %(accountNumber)s"
 
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which obscures the account number.
