--- a/gui/locales/pl/messages.po
+++ b/gui/locales/pl/messages.po
@@ -310,8 +310,8 @@ msgid "Expand %(location)s"
 msgstr "Rozwiń %(location)s"
 
 msgctxt "accessibility"
-msgid "Forget %(accountToken)s"
-msgstr "Zapomnij %(accountToken)s"
+msgid "Forget %(accountNumber)s"
+msgstr "Zapomnij %(accountNumber)s"
 
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which obscures the account number.
