--- a/gui/locales/sv/messages.po
+++ b/gui/locales/sv/messages.po
@@ -298,8 +298,8 @@ msgid "Expand %(location)s"
 msgstr "Visa %(location)s"
 
 msgctxt "accessibility"
-msgid "Forget %(accountToken)s"
-msgstr "Glöm %(accountToken)s"
+msgid "Forget %(accountNumber)s"
+msgstr "Glöm %(accountNumber)s"
 
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which obscures the account number.
