--- a/gui/locales/zh-TW/messages.po
+++ b/gui/locales/zh-TW/messages.po
@@ -292,8 +292,8 @@ msgid "Expand %(location)s"
 msgstr "展開 %(location)s"
 
 msgctxt "accessibility"
-msgid "Forget %(accountToken)s"
-msgstr "忘記 %(accountToken)s"
+msgid "Forget %(accountNumber)s"
+msgstr "忘記 %(accountNumber)s"
 
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which obscures the account number.
