--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -325,7 +325,7 @@ msgid "Expand %(location)s"
 msgstr ""
 
 msgctxt "accessibility"
-msgid "Forget %(accountToken)s"
+msgid "Forget %(accountNumber)s"
 msgstr ""
 
 #. Provided to accessibility tools such as screenreaders to describe
