--- a/gui/locales/ru/messages.po
+++ b/gui/locales/ru/messages.po
@@ -310,8 +310,8 @@ msgid "Expand %(location)s"
 msgstr "Развернуть %(location)s"
 
 msgctxt "accessibility"
-msgid "Forget %(accountToken)s"
-msgstr "Забыть %(accountToken)s"
+msgid "Forget %(accountNumber)s"
+msgstr "Забыть %(accountNumber)s"
 
 #. Provided to accessibility tools such as screenreaders to describe
 #. the button which obscures the account number.
