Show create account confirm when user has account

--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -2341,6 +2341,9 @@ msgstr ""
 msgid "Create"
 msgstr ""
 
+msgid "Create new account"
+msgstr ""
+
 msgid "Create new list"
 msgstr ""
 
@@ -2387,6 +2390,9 @@ msgid "Disconnecting..."
 msgstr ""
 
 msgid "Dismiss"
+msgstr ""
+
+msgid "Do you want to create a new account?"
 msgstr ""
 
 msgid "Edit custom lists"
@@ -2723,6 +2729,9 @@ msgid "WireGuard port"
 msgstr ""
 
 msgid "YOU MIGHT BE LEAKING NETWORK TRAFFIC"
+msgstr ""
+
+msgid "You already have a saved account number, by creating a new account the saved account number will be removed from this device. This cannot be undone."
 msgstr ""
 
 msgid "You are running an unsupported app version."
